# todo-app-

./: .gitignore  setup.cfg
phase-1/: README (2).md  pyproject.toml
phase-1/.specify/memory/: constitution.md
phase-1/history/prompts/001-todo-console-app/: 1-todo-console-app-spec.spec.prompt.md
phase-1/history/prompts/constitution/: 1-update-python-console-app-constitution.constitution.prompt.md
phase-1/specs/001-todo-console-app/: data-model.md  plan.md  quickstart.md  research.md
phase-1/specs/001-todo-console-app/checklists/: requirements.md
phase-1/src/cli/: main.py
phase-1/src/services/: todo_service.py
phase-1/tests/unit/: test_task.py
phase-2/: README.md  pyproject.toml  requirements.txt
phase-2/backend/: alembic.ini  requirements.txt
phase-2/backend/alembic/: env.py
phase-2/backend/alembic/versions/: 001_initial_tables.py
phase-2/backend/src/: main.py
phase-2/backend/src/api/: auth.py  tasks.py
phase-2/backend/tests/: conftest.py
phase-2/frontend/: package.json
phase-2/frontend/app/: Providers.tsx  layout.tsx
phase-2/specs/001-todo-app/: plan.md  spec.md  tasks.md
phase-2/specs/002-web-todo/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
phase-2/specs/todo-app/: spec.md
phase-2/src/: __init__.py  main.py
phase-2/src/cli/: __init__.py  cli_interface.py
phase-2/src/commands/: __init__.py  command_handlers.py
phase-2/src/models/: __init__.py  task.py
phase-2/src/services/: __init__.py  task_service.py
phase-2/tests/: __init__.py  test_cli.py  test_task.py  test_task_service.py
(+42 files in other folders)
