[project]
name = "todo-app"
version = "0.1.0"
description = "A command-line todo application"
requires-python = ">=3.13"
authors = [
    {name = "Developer", email = "dev@example.com"}
]
readme = "README.md"
license = {text = "MIT"}

[project.scripts]
todo = "src.main:main"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "flake8>=7.0.0",
    "black>=24.0.0"
]